--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,6 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission
-        android:name="android.permission.WRITE_APN_SETTINGS"
-        tools:ignore="ProtectedPermissions" />
 
     <!-- 相机 -->
     <uses-permission android:name="android.permission.CAMERA" />
@@ -37,7 +34,7 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/icon_logo_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        android:theme="@style/AppTheme"
         tools:replace="android:icon">
         <activity
             android:name="com.github.mzule.activityrouter.router.RouterActivity"
@@ -96,7 +93,9 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity android:name=".activity.TencentTest" />
-        <activity android:name=".activity.main.MainActivity">
+        <activity
+            android:theme="@style/AppTheme"
+            android:name=".activity.main.MainActivity">
 
         </activity>
 
@@ -110,7 +109,9 @@
 
         <activity android:name=".activity.login.LoginActivity" />
         <activity android:name=".activity.register.RegisterActivity" />
-        <activity android:name=".activity.download.DownloadActivity" />
+        <activity
+            android:theme="@style/AppTheme"
+            android:name=".activity.download.DownloadActivity" />
         <activity android:name=".wifidirect.activity.single_trans.main.SingleTransMainActivity" />
         <activity android:name=".activity.scan.ScanActivity" />
         <activity android:name=".wifidirect.activity.single_trans.trans.TransActivity" />
