--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
         android:name="android.permission.ACCESS_WIFI_STATE"
         android:required="true" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
     <uses-permission
         android:name="android.permission.CHANGE_WIFI_STATE"
         android:required="true" />
@@ -91,10 +90,10 @@
             </intent-filter>
         </activity>
 
-        <!--<activity-->
-            <!--android:name=".wxapi.WXEntryActivity"-->
-            <!--android:exported="true"-->
-            <!--android:label="@string/app_name" />-->
+        <!-- <activity -->
+        <!-- android:name=".wxapi.WXEntryActivity" -->
+        <!-- android:exported="true" -->
+        <!-- android:label="@string/app_name" /> -->
 
         <activity
             android:name="com.tencent.connect.common.AssistActivity"
@@ -148,7 +147,10 @@
         <activity android:name=".activity.forget_pass.ForgetPassActivity" />
         <activity android:name=".activity.decim.DcimActivity" />
         <activity android:name=".activity.clip.ClipImageActivity" />
-        <activity android:name=".wifidirect.activity.record.WifiDirectRecordActivity"></activity>
+        <activity android:name=".wifidirect.activity.record.WifiDirectRecordActivity" />
+        <activity android:name=".activity.person_info.PersonInfoActivity" />
+        <activity android:name=".activity.setting.SettingActivity" />
+        <activity android:name=".activity.about_youyun.AboutYouyunActivity"></activity>
     </application>
 
 </manifest>
