--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -149,9 +149,12 @@
         <activity android:name=".activity.decim.DcimActivity" />
         <activity android:name=".activity.clip.ClipImageActivity" />
         <activity android:name=".wifidirect.activity.record.WifiDirectRecordActivity" />
-        <activity android:name=".activity.person_info.PersonInfoActivity" />
+        <activity
+            android:name=".activity.person_info.PersonInfoActivity"
+            android:theme="@style/FullToStatusBarTheme" />
         <activity android:name=".activity.setting.SettingActivity" />
-        <activity android:name=".activity.about_youyun.AboutYouyunActivity"/>
+        <activity android:name=".activity.about_youyun.AboutYouyunActivity" />
+        <activity android:name=".activity.concern.ConcernActivity" />
     </application>
 
 </manifest>
