--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -155,7 +155,7 @@
         <activity android:name=".activity.setting.SettingActivity" />
         <activity android:name=".activity.about_youyun.AboutYouyunActivity" />
         <activity android:name=".activity.concern.ConcernActivity" />
-        <activity android:name=".activity.person_file_manager.PersonFileManagerActivity" />
+        <activity android:name=".activity.person_file_manager_index.PersonFileManagerActivity" />
         <activity android:name=".activity.my_collection.MyCollectionActivity"></activity>
     </application>
 
