添加个人信息编辑界面，接口未接，有问题

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -157,7 +157,8 @@
         <activity android:name=".activity.concern.ConcernActivity" />
         <activity android:name=".activity.person_file_manager.person_file_manager_index.PersonFileManagerActivity" />
         <activity android:name=".activity.my_collection.MyCollectionActivity" />
-        <activity android:name=".activity.person_file_manager.person_file_list.PersonFileListActivity"></activity>
+        <activity android:name=".activity.person_file_manager.person_file_list.PersonFileListActivity" />
+        <activity android:name=".activity.person_setting.PersonSettingActivity"></activity>
     </application>
 
 </manifest>
