消息界面私信接入

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -159,7 +159,9 @@
         <activity android:name=".activity.my_collection.MyCollectionActivity" />
         <activity android:name=".activity.person_file_manager.person_file_list.PersonFileListActivity" />
         <activity android:name=".activity.person_setting.PersonSettingActivity" />
-        <activity android:name=".activity.chat.ChatActivity"></activity>
+        <activity android:name=".activity.chat.ChatActivity" />
+        <activity android:name=".activity.star.StarRecordActivity" />
+        <activity android:name=".activity.comment.CommentRecordActivity"></activity>
     </application>
 
 </manifest>
