--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -214,6 +214,9 @@
         <activity
             android:theme="@style/MyActivityTheme"
             android:name=".activity.comment.CommentRecordActivity"/>
+        <activity
+            android:theme="@style/MyActivityTheme"
+            android:name=".activity.person_file_manager.person_file_path.PersonFileListPathActivity"/>
     </application>
 
 </manifest>
