修改引入Rxdownload的混淆问题

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ android {
             minifyEnabled true
             //压缩
             zipAlignEnabled true
+            //移除无用resource文件
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
             pseudoLocalesEnabled true
