--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,9 +108,12 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.android.support:design:26.1.0'
+    compile 'com.android.support.test.espresso:espresso-idling-resource:3.0.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:2.2.2'
     implementation files('libs/open_sdk_r5793_lite.jar')
     implementation files('libs/mta-sdk-1.6.2.jar')
 }
