--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,20 @@
 
 buildscript {
 
+//    ext.kotlin_version = '1.1.51'
+//    ext.android_plugin_version = '2.3.0'
     repositories {
         google()
         jcenter()
+        maven {
+            url 'https://oss.sonatype.org/content/repositories/snapshots/'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0-rc2'
         classpath 'com.jakewharton:butterknife-gradle-plugin:8.8.0'
+//        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
