--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-//apply plugin: 'kotlin-android'
 
 android {
     signingConfigs {
@@ -13,8 +12,8 @@ android {
     dataBinding{
         enabled true
     }
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.0"
     defaultConfig {
         applicationId "com.sunny.youyun"
         minSdkVersion 15
@@ -72,56 +71,56 @@ repositories {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     //ButterKnife
-    compile 'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     //Logger
-    compile 'com.orhanobut:logger:2.1.1'
+    implementation 'com.orhanobut:logger:2.1.1'
     //RxJava
     //retrofit
     //RxDownload
     //rx download
-    compile 'zlc.season:rxdownload3:1.1.1'
+    implementation 'zlc.season:rxdownload3:1.1.1'
     //Router
-    compile 'com.github.mzule.activityrouter:activityrouter:1.2.2'
+    implementation 'com.github.mzule.activityrouter:activityrouter:1.2.2'
     annotationProcessor 'com.github.mzule.activityrouter:compiler:1.1.7'
     //图片加载 glide
-    compile 'com.github.bumptech.glide:glide:4.0.0'
-    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.github.bumptech.glide:glide:4.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
     //bar color
-    compile 'com.githang:status-bar-compat:0.5.3'
+    implementation 'com.githang:status-bar-compat:0.5.3'
     //数据库
-    compile 'org.litepal.android:core:1.5.1'
+    implementation 'org.litepal.android:core:1.5.1'
     //Animator
-    compile 'com.nineoldandroids:library:2.4.0'
+    implementation 'com.nineoldandroids:library:2.4.0'
     //  zxing 库
-    compile 'com.google.zxing:core:3.2.1'
-    compile 'com.google.zxing:android-core:3.2.1'
+    implementation 'com.google.zxing:core:3.2.1'
+    implementation 'com.google.zxing:android-core:3.2.1'
     //JPush
     // 此处以JPush 3.0.5 版本为例。
-    compile 'cn.jiguang.sdk:jpush:3.0.5'
+    implementation 'cn.jiguang.sdk:jpush:3.0.5'
     // 此处以JCore 1.1.2 版本为例。
-    compile 'cn.jiguang.sdk:jcore:1.1.2'
+    implementation 'cn.jiguang.sdk:jcore:1.1.2'
     //permission
-    compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar'
+    implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar'
     //eventbus
-    compile 'org.greenrobot:eventbus:3.0.0'
+    implementation 'org.greenrobot:eventbus:3.0.0'
 
     //wechat
-    compile 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:1.4.0'
+    implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:1.4.0'
 
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support:recyclerview-v7:26.1.0'
-    compile 'com.android.support:design:26.1.0'
-    compile 'com.android.support.test.espresso:espresso-idling-resource:3.0.1'
+    //support
+    implementation 'com.android.support:support-v4:27.0.0'
+    implementation 'com.android.support:appcompat-v7:27.0.0'
+    implementation 'com.android.support:recyclerview-v7:27.0.0'
+    implementation 'com.android.support:design:27.0.0'
+    implementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:2.2.2'
+
     implementation files('libs/open_sdk_r5793_lite.jar')
     implementation files('libs/mta-sdk-1.6.2.jar')
 
-//    kapt "com.android.databinding:compiler:$android_plugin_version"
-//    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
 }
