--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,9 @@
 
 buildscript {
     ext.support_version = '27.0.0'
-//    ext.kotlin_version = '1.1.51'
-//    ext.android_plugin_version = '2.3.0'
+    ext.kotlin_version = '1.1.60'
+    ext.anko_version = '0.10.2'
+    ext.support_version = '27.0.0'
     repositories {
         google()
         jcenter()
@@ -14,6 +15,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
         classpath 'com.jakewharton:butterknife-gradle-plugin:8.8.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
 //        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
 
