--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.iml
 .gradle
+/oureda.jks
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
@@ -7,3 +8,4 @@
 /build
 /captures
 .externalNativeBuild
+将删除 oureda.jks.enc
